--- a/MailToOwnCloud/App.config
+++ b/MailToOwnCloud/App.config
@@ -1,24 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="MailToOwnCloud.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
-    <applicationSettings>
-        <MailToOwnCloud.Properties.Settings>
-            <setting name="server" serializeAs="String">
-                <value>files.aliter.spb.ru</value>
-            </setting>
-            <setting name="login" serializeAs="String">
-                <value>admin</value>
-            </setting>
-            <setting name="password" serializeAs="String">
-                <value>UIQKQ-WCATY-QCCWX-TGMBI</value>
-            </setting>
-        </MailToOwnCloud.Properties.Settings>
-    </applicationSettings>
+  <appSettings>
+    <add key="server" value="files.aliter.spb.ru" />
+    <add key="login" value="admin" />
+    <add key="password" value="admin" />
+    <add key="thunderbird_exe" value="C:\Program Files (x86)\Mozilla Thunderbird\thunderbird.exe" />
+    <add key="thunderbird_args" value="-compose body={0}" />
+    <!--Обязательно оборачиваете сообщение {0}[Сообщение]{1} -->
+    <add key="message_error_title" value="{0}Error!{1}" />
+    <add key="message_error" value="{0}Error! Обратитесь к системному администратору{1}" />
+  </appSettings>
 </configuration>
