--- a/MailToOwnCloud/packages.config
+++ b/MailToOwnCloud/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net461" />
   <package id="WebDAVClient" version="1.1.3" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="1.4.16" targetFramework="net461" />
 </packages>
