--- a/Client/MailToOwnCloud/App.config
+++ b/Client/MailToOwnCloud/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="server" value="files.aliter.spb.ru" />
-    <add key="login" value="admin" />
-    <add key="password" value="admin" />
+    <add key="server" value="server" />
+    <add key="login" value="login" />
+    <add key="password" value="password" />
     <add key="thunderbird_exe" value="C:\Program Files (x86)\Mozilla Thunderbird\thunderbird.exe" />
     <add key="thunderbird_args" value="-compose body={0}" />
     <!--Обязательно оборачиваете сообщение {0}[Сообщение]{1} -->
