--- a/Client/MailToOwnCloud/App.config
+++ b/Client/MailToOwnCloud/App.config
@@ -6,6 +6,9 @@
     <add key="password" value="password" />
     <add key="thunderbird_exe" value="C:\Program Files (x86)\Mozilla Thunderbird\thunderbird.exe" />
     <add key="thunderbird_args" value="-compose body={0}" />
+    <add key="thunderbird_is_days" value="True" />
+    <add key="thunderbird_days" value="180" />
+    <add key="thunderbird_days_text" value="Ссылка будет доступна до {0}" />
     <!--Обязательно оборачиваете сообщение {0}[Сообщение]{1} -->
     <add key="message_error_title" value="{0}Error!{1}" />
     <add key="message_error" value="{0}Error! Обратитесь к системному администратору{1}" />
