--- a/Client/MailToOwnCloud/MailToOwnCloud.csproj
+++ b/Client/MailToOwnCloud/MailToOwnCloud.csproj
@@ -84,6 +84,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\AuthenticationHelper.cs" />
     <Compile Include="Utils\EncryptionHelper.cs" />
     <Compile Include="Utils\MessageBoxShow.cs" />
     <Compile Include="OutputFilesWindows.xaml.cs">
@@ -100,6 +101,9 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <None Include="access.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
