--- a/Client/MailToOwnCloud/App.config
+++ b/Client/MailToOwnCloud/App.config
@@ -9,6 +9,9 @@
     <add key="thunderbird_is_days" value="True" />
     <add key="thunderbird_days" value="180" />
     <add key="thunderbird_days_text" value="Ссылка будет доступна до {0}" />
+    <add key="thunderbird_files_text1" value="Список передаваемых файлов {0}" />
+    <add key="thunderbird_files_text2" value=":" />
+    <add key="thunderbird_files_text3" value=" {0}" />
     <!--Обязательно оборачиваете сообщение {0}[Сообщение]{1} -->
     <add key="message_error_title" value="{0}Error!{1}" />
     <add key="message_error" value="{0}Error! Обратитесь к системному администратору{1}" />
